[tool.poetry]
name = "cu_profile_utils"
version = "0.2.3"
description = "Utilities for scraping and analyzing University of Colorado Profiles data."
authors = ["Sean Davis <seandavi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.24.0"
bs4 = "^0.0.1"
tenacity = "^8.1.0"
lxml = "^4.9.1"
networkx = "^2.8.8"
structlog = "^22.3.0"
pandas = "^2.1.1"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"
ipykernel = "^6.18.1"
jupyter = "^1.0.0"
mkdocs = {extras = ["mkdocstrings"], version = "^1.4.2"}
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-material = "^8.5.10"
tox = "^3.27.1"
pytest = {extras = ["anyio"], version = "^7.2.0"}
anyio = "^3.6.2"
trio = "^0.22.0"
mkdocs-graphviz = "^1.4.91"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
